wiredemo update
